<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/luas_trapesium"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masukkan Nilai Atas"
            android:layout_marginRight="44sp"
            android:layout_marginLeft="15sp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edt_trapesium_atas"
            android:hint="@string/hint_trapesium_atas"
            android:textColor="@android:color/black"
            android:paddingLeft="0dp"
            android:drawablePadding="5dp"
            android:textColorHint="#999"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masukkan Nilai Bawah"
            android:layout_marginRight="25sp"
            android:layout_marginLeft="15sp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edt_trapesium_bawah"
            android:hint="@string/hint_trapesium_bawah"
            android:textColor="@android:color/black"
            android:paddingLeft="0dp"
            android:drawablePadding="5dp"
            android:textColorHint="#999"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masukkan Nilai Tinggi"
            android:layout_marginRight="30sp"
            android:layout_marginLeft="15sp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edt_trapesium_tinggi"
            android:hint="@string/hint_trapesium_tinggi"
            android:textColor="@android:color/black"
            android:paddingLeft="0dp"
            android:drawablePadding="5dp"
            android:textColorHint="#999"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20sp"
        >

        <Button
            android:id="@+id/btn_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hitung Luas"
            android:textAllCaps="false"
            android:onClick="hitungLuasTrapesium"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20sp"
        >

        <TextView
            android:id="@+id/trapesium_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="75sp"
            />

    </LinearLayout>

</LinearLayout>